# Multiband-Quasar-Classification

./: .gitignore  README.md  projeto_quasares_redshift_3_fases.md  pyproject.toml
configs/: image_benchmark.yaml  image_benchmark_medium.yaml  image_benchmark_medium_pretrained.yaml  image_benchmark_medium_seed123.yaml  image_benchmark_medium_seed123_pretrained.yaml  image_benchmark_medium_seed13.yaml  image_benchmark_medium_seed13_pretrained.yaml  image_benchmark_small.yaml  image_benchmark_small_seed123.yaml  image_benchmark_small_seed123_pretrained.yaml  image_benchmark_small_seed13.yaml  image_benchmark_small_seed13_pretrained.yaml  image_benchmark_small_seed42_pretrained.yaml  image_benchmark_smoke.yaml
manifests/phase1/: image_sample_medium_seed123.csv  image_sample_medium_seed13.csv  image_sample_medium_seed42.csv
notebooks/image_benchmark/: 01_explore_sdss_image_sample.ipynb
reports/image_benchmark/: metadata_seed_diagnostics.md  model_comparison.md
src/multiband_qso/: __init__.py  config.py
src/multiband_qso/data/: __init__.py  cutouts.py  metadata.py  sdss.py  validation.py
src/multiband_qso/datasets/: __init__.py  image_dataset.py
src/multiband_qso/evaluation/: __init__.py  analyze_metadata_seeds.py  evaluate_image_model.py  metrics.py  plots.py  reporting.py
src/multiband_qso/image_models/: __init__.py  factory.py  simple_cnn.py
tests/: test_config_smoke.py  test_cutouts.py  test_dataset.py  test_manifest.py  test_metadata.py  test_metadata_validation.py  test_metrics.py  test_models.py  test_reporting.py  test_sdss_live.py
(+2 files in other folders)
