[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiband-qso-classification"
version = "0.1.0"
description = "Image benchmark for STAR/GALAXY/QSO classification with SDSS DR17 cutouts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
]

[project.scripts]
sdss-fetch-catalog = "multiband_qso.data.sdss:main"
sdss-build-metadata = "multiband_qso.data.metadata:main"
sdss-download-cutouts = "multiband_qso.data.cutouts:main"
sdss-validate-metadata = "multiband_qso.data.validation:main"
qso-train-image = "multiband_qso.training.train_image_model:main"
qso-evaluate-image = "multiband_qso.evaluation.evaluate_image_model:main"
qso-image-benchmark-report = "multiband_qso.evaluation.reporting:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_sdss: tests that require live SDSS network access",
]
